Fix bug where columns were not properly aligned and re-enable new text post form

--- a/assets/js/post/new/exercise/aorb/NewAorbExercise.scss
+++ b/assets/js/post/new/exercise/aorb/NewAorbExercise.scss
@@ -1,11 +1,11 @@
 .newAorbExercise {
 
-    .wrapper {
-        border: 1px solid #ced4da;
-        border-radius: 0.5rem;
-        padding: 1rem;
-        margin-bottom: 1rem;
-    }
+    // .wrapper {
+    //     border: 1px solid #ced4da;
+    //     border-radius: 0.5rem;
+    //     padding: 1rem;
+    //     margin-bottom: 1rem;
+    // }
 
     .header {
 
